--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>jcommander</artifactId>
 			<version>1.47</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.jimfs</groupId>
+			<artifactId>jimfs</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
